fix: change modal-inner-wrap background color

--- a/app/design/frontend/Devmy/nextouch/Magento_Theme/web/css/source/_extend.less
+++ b/app/design/frontend/Devmy/nextouch/Magento_Theme/web/css/source/_extend.less
@@ -169,7 +169,7 @@
         left: 0 !important;
 
         &.modal-slide .modal-inner-wrap {
-            background-color: rgba(0, 0, 0, 0.5) !important;
+            background-color: rgba(66,156,134, 0.95) !important;
         }
     }
 }
